--- a/css/styles.css
+++ b/css/styles.css
@@ -13,3 +13,14 @@ ul {
   list-style: none;
   height: 1cm;
 }
+.summary {
+  background-color: white;
+  margin-bottom: 20px;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+  padding: 18px;
+  border-radius: 10px;
+}
+div {
+  display: flex;
+  justify-content: center;
+}
