--- a/stles.css
+++ b/stles.css
@@ -2,7 +2,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 header {
-  background-color: beige;
+  background-color: black;
   padding: 2rem;
 }
 ul {
@@ -16,4 +16,7 @@ ul {
 div {
   display: flex;
   justify-content: center;
+}
+nav ul li a {
+  color: white;
 }
